--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ body {
 button {
     margin: 5px;
     border-radius: 32px;
-    font-size: 1.5em;
+    font-size: 25px;
     border: none;
     background-color: #013668;
     box-shadow: 5px 5px 10px -3px #00000040, -5px -5px 15px 3px #0000001f;
